overflow fix

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -958,7 +958,7 @@ body.stats{
 
 body.webapp{
 	background-color: #f1f5f5;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 body.authorization{
